--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+    paths: 
+      - '.github/workflows/aws.yaml'
+      - 'image/*'
 
 permissions:
   id-token: write
