--- a/.github/workflows/image.yaml
+++ b/.github/workflows/image.yaml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths: 
-      - '.github/workflows/aws.yaml'
+      - '.github/workflows/image.yaml'
       - 'image/*'
 
 permissions:
